--- a/src/components/FryerForm.css
+++ b/src/components/FryerForm.css
@@ -1,9 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap');
+
 :root {
     --spidr-background: #28292a;
     --spidr-blue: #479daf;
-    --spidr-light-blue: #5b9fad;
     --spidr-icon-color:#1f7283;
-    --transparent: rgba(255,255,255,.125);
+    --spidr-black-tranlucent: rgba(0,0,0,.6);
+    --error-color: #2E0000;
 }
 
 .bg-noise {
@@ -14,5 +16,97 @@
   z-index: -1;
   top: 0;
   left: 0;
-  opacity: .6
+  opacity: .6;
+}
+
+body {
+    font-family: Raleway, sans-serif!important;
+    color: white;
+    background-color: var(--spidr-background);
+}
+
+hr {
+    color: white;
+    border-style: solid;
+    width: 20%;
+    margin-top: 20px;
+}
+
+.form-error {
+    color: var(--spidr-background);
+    margin-top: 0px;
+    font-weight: 600;
+    text-align: center;
+}
+
+#fryer-form {
+    background-color: var(--spidr-blue);
+    background-image: url(../assets/noise.png);
+    padding: 10px;
+    text-align: center;
+}
+
+#form-description {
+    width: 60%;
+    margin: auto;
+    margin-top: 10px;
+}
+
+.form-container {
+    display: flex;
+    flex-direction: column;
+    margin: auto;
+    width: 100%;
+    align-items: center;
+}
+
+.submit-container {
+    display: flex;
+    flex-direction: column;
+    margin: auto;
+    margin-top: 10px;
+}
+
+.entry-field {
+    align-items: center;
+    width: 50%;
+    max-width: 500px;
+}
+
+.entry-field h3 {
+    text-align: left;
+}
+
+.entry-field input {
+    width: 100%;
+    box-sizing: border-box;
+    background-color: var(--spidr-black-tranlucent);
+    font-family: Raleway, sans-serif!important;
+    color: white;
+    padding: 8px 12px;
+    border: 1px solid #fff;
+}
+
+h1, h2, h3, h4, h5 {
+    margin-bottom: 0;
+    font-weight: 200;
+}
+
+.btn {
+    background-color: transparent;
+    border: 1px solid #fff;
+    border-radius: 0;
+    color: #fff;
+    margin-top: 15px;
+    transition: all .25s ease 0s;
+    font-weight: 200;
+    font-size: 1em;
+    padding: 7px 15px 7px 15px;
+}
+
+.btn:hover {
+    cursor: pointer;
+    background-color:var(--spidr-black-tranlucent);
+    border:1px solid #56acbd!important;
+    color:#56acbd!important
 }
